<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Activity.AddNewStoreActivity">

    <LinearLayout android:layout_width="match_parent"

                  android:id="@+id/linearAll"
                  android:orientation="vertical"
                  android:layout_height="wrap_content">


    <EditText android:layout_width="match_parent"
              android:id="@+id/etStoreName"
              android:hint="@string/name"
              android:layout_margin="10dp"
              android:layout_height="wrap_content"
              tools:ignore="HardcodedText"/>
    <EditText android:layout_width="match_parent"
              android:id="@+id/etAddress"
              android:hint="@string/address"
              android:layout_margin="10dp"
              android:layout_height="wrap_content"
              tools:ignore="HardcodedText"/>
    <EditText android:layout_width="match_parent"
              android:id="@+id/etPhoneNo"
              android:hint="@string/phoneNo"
              android:inputType="phone|number"
              android:layout_margin="10dp"
              android:layout_height="wrap_content"
              tools:ignore="HardcodedText"/>
    <Button android:layout_width="wrap_content"
            android:text="@string/Add"
            android:layout_gravity="center"
            android:id="@+id/btnAddStore"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>