<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.DownloadDataActivity">


        <TextView android:layout_width="match_parent"
                  android:padding="10dp"
                  android:textColor="@color/colorBlack"
                  android:textColorHint="@color/colorBlack"
                  android:id="@+id/tvFromDate"
                  android:hint="@string/from"
                  android:layout_margin="10dp"
                  android:gravity="center"
                  android:layout_gravity="center"
                  android:background="@drawable/modified_circle_image_view"
                  android:layout_height="wrap_content"/>


       <TextView android:layout_width="match_parent"
                 android:padding="10dp"
                 android:layout_gravity="center"
                 android:textColor="@color/colorBlack"
                 android:textColorHint="@color/colorBlack"
                 android:hint="@string/to"
                 android:id="@+id/tvToDate"
                 android:layout_margin="10dp"
                 android:gravity="center"
                 android:background="@drawable/modified_circle_image_view"
                 android:layout_height="wrap_content"/>
    <Button android:layout_width="wrap_content"
            android:text="@string/downloadData"
            android:layout_gravity="center"
            android:id="@+id/btnDownloadData"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:id="@+id/tvLocation"
              android:layout_margin="20dp"
              android:text="@string/fileLocationDisplay"
              android:gravity="center"
              android:textSize="15sp"
              android:layout_height="wrap_content"/>

</LinearLayout>