<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.UploadImagesActivity">
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_margin="10dp"
                  android:layout_height="wrap_content">
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_gravity="center"
                      android:layout_height="wrap_content">
        <Button android:layout_width="wrap_content"
                android:text="@string/chooseImage"
                android:id="@+id/btnChooseImage"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>
        <Button android:layout_width="wrap_content"
                 android:text="@string/camera"
                 android:id="@+id/btnOpenCamera"
                 android:layout_gravity="center"
                 android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView android:layout_width="match_parent"
                  android:id="@+id/tvPercentage"
                  android:text="@string/uploadStatus"
                  android:textStyle="bold"
                  android:textColor="@color/colorBlack"
                  android:layout_height="wrap_content"
                  android:gravity="center"
        />
        <ImageView android:layout_width="wrap_content"
                   android:layout_gravity="center"
                   android:layout_margin="10dp"
                   android:id="@+id/imageShowSelectedImage"
                   android:src="@drawable/ic_insert_photo"
                   android:layout_height="wrap_content"/>
        <Button android:layout_width="wrap_content"
                android:text="@string/uploadImage"
                android:id="@+id/btnUploadImage"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>