<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/backgroundGrey"
        android:layout_height="match_parent"
        tools:context=".Activity.QuestionAddingActivity">
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_height="wrap_content">


<LinearLayout android:layout_width="match_parent"
              android:orientation="vertical"
              android:id="@+id/linearQuestionFirst"
              android:layout_margin="10dp"
              android:background="@drawable/modified_curved_linear_view"
              android:layout_height="wrap_content">
    <TextView android:layout_width="wrap_content"
              android:text="@string/chooseQuestion"
              android:textColor="@color/colorBlack"
              android:textStyle="bold"
              android:layout_gravity="center"
              android:padding="10dp"
              android:layout_height="wrap_content"/>
    <EditText android:layout_width="match_parent"
              android:layout_margin="10dp"
              android:hint="@string/enterQuestion"
              android:inputType="textCapSentences"
              android:id="@+id/etQuestion"
              android:layout_height="wrap_content"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">
        <EditText android:layout_width="0dp"
                  android:layout_weight="3"
                  android:hint="@string/enterOption"
                  android:inputType="textCapSentences"
                  android:id="@+id/etOptions"
                  android:layout_height="wrap_content"/>
        <EditText android:layout_width="0dp"
                  android:layout_weight="1"
                  android:hint="@string/value"
                  android:inputType="number"
                  android:id="@+id/etValue"
                  android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button android:layout_width="wrap_content"
            android:text="@string/addOption"
            android:layout_gravity="end"
            android:id="@+id/btnAddOptions"
            android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:padding="10dp"
            android:id="@+id/rvOptions"
            android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>
    <LinearLayout android:layout_width="match_parent"
                  android:gravity="center"
                  android:layout_height="wrap_content">
    <Button android:layout_width="wrap_content"
            android:text="@string/addQuestion"
            android:nestedScrollingEnabled="false"
            android:layout_gravity="center"
            android:id="@+id/btnAddQuestions"
            android:layout_height="wrap_content"/>
        <Button android:layout_width="wrap_content"

                android:text="@string/deleteQuestions"
                android:nestedScrollingEnabled="false"
                android:layout_gravity="center"
                android:id="@+id/btnDeleteQuestion"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_margin="10dp"
                      android:id="@+id/linearQuestionSecond"
                      android:orientation="vertical"
                      android:background="@drawable/modified_curved_linear_view"
                      android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                      android:text="@string/dateRelatedQuestions"
                      android:textColor="@color/colorBlack"
                      android:textStyle="bold"
                      android:layout_gravity="center"
                      android:padding="10dp"
                      android:layout_height="wrap_content"/>
            <EditText android:layout_width="match_parent"
                      android:layout_margin="10dp"
                      android:hint="@string/enterQuestion"
                      android:inputType="textCapSentences"
                      android:id="@+id/etDateQuestion"
                      android:layout_height="wrap_content" tools:ignore="TextFields"/>
            <LinearLayout android:layout_width="match_parent"
                          android:gravity="center"
                          android:layout_height="wrap_content">
            <Button android:layout_width="wrap_content"

                    android:text="@string/addQuestion"
                    android:nestedScrollingEnabled="false"
                    android:layout_gravity="center"
                    android:id="@+id/btnAddDateQuestions"
                    android:layout_height="wrap_content"/>
                <Button android:layout_width="wrap_content"

                        android:text="@string/deleteQuestions"
                        android:nestedScrollingEnabled="false"
                        android:layout_gravity="center"
                        android:id="@+id/btnDeleteDateQuestion"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_margin="10dp"
                      android:id="@+id/linearQuestionThird"
                      android:orientation="vertical"
                      android:background="@drawable/modified_curved_linear_view"
                      android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                      android:text="@string/timeRelateQuestion"
                      android:textColor="@color/colorBlack"
                      android:textStyle="bold"
                      android:layout_gravity="center"
                      android:padding="10dp"
                      android:layout_height="wrap_content"/>
            <EditText android:layout_width="match_parent"
                      android:layout_margin="10dp"
                      android:hint="@string/enterQuestion"
                      android:inputType="textCapSentences"
                      android:id="@+id/etTimeQuestion"
                      android:layout_height="wrap_content" tools:ignore="TextFields"/>
            <LinearLayout android:layout_width="match_parent"
                          android:gravity="center"
                          android:layout_height="wrap_content">
            <Button android:layout_width="wrap_content"
                    android:text="@string/addQuestion"
                    android:nestedScrollingEnabled="false"
                    android:layout_gravity="center"
                    android:id="@+id/btnAddTimeQuestions"
                    android:layout_height="wrap_content"/>
                <Button android:layout_width="wrap_content"

                        android:text="@string/deleteQuestions"
                        android:nestedScrollingEnabled="false"
                        android:layout_gravity="center"
                        android:id="@+id/btnDeleteTimeQuestion"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_margin="10dp"
                      android:orientation="vertical"
                      android:id="@+id/linearQuestionFourth"
                      android:background="@drawable/modified_curved_linear_view"
                      android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                      android:text="@string/inputRelatedQuestion"
                      android:textColor="@color/colorBlack"
                      android:textStyle="bold"
                      android:layout_gravity="center"
                      android:padding="10dp"
                      android:layout_height="wrap_content"/>
            <EditText android:layout_width="match_parent"
                      android:layout_margin="10dp"
                      android:hint="@string/enterQuestion"
                      android:inputType="textCapSentences"
                      android:id="@+id/etInputFieldQuestion"
                      android:layout_height="wrap_content"
                      tools:ignore="TextFields"/>
            <LinearLayout android:layout_width="match_parent"
                          android:gravity="center"
                          android:layout_height="wrap_content">
            <Button android:layout_width="wrap_content"
                    android:text="@string/addQuestion"
                    android:nestedScrollingEnabled="false"
                    android:layout_gravity="center"
                    android:id="@+id/btnInputFieldQuestion"
                    android:layout_height="wrap_content"/>
            <Button android:layout_width="wrap_content"

                    android:text="@string/deleteQuestions"
                    android:nestedScrollingEnabled="false"
                    android:layout_gravity="center"
                    android:id="@+id/btnDeleteInputQuestion"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>